# MBC_25_repo

./: .env.example  .gitignore  CIRCLEPRD.md  DEVPOST_README.md  PROJECT_SUMMARY.md  README.md  SUMMARY.md  get-fund-pda.ts  next.config.ts  package-lock.json  package.json  prettier.config.js  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
anchor/: Anchor.toml  Cargo.toml  package.json
anchor/programs/solana_direct/: Cargo.toml
anchor/programs/solana_direct/src/: lib.rs
scripts/: deploy-program.ts  get-pda.ts  init-fund-with-seed.ts  withdraw-from-fund.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/about/: page.tsx
src/app/api/actions/donate-sol/: route.ts
src/app/api/actions/donate-sol-gaza/: route.ts
src/app/api/actions/donate-sol-sudan/: route.ts
src/app/api/actions/donate-sol-ukraine/: route.ts
src/app/api/polymarket/: route.ts
src/app/causes/: page.tsx
src/app/ngo-dashboard/: page.tsx
src/app/ngo-signup/: page.tsx
src/app/transparency/: page.tsx
src/components/: providers.tsx
src/components/dashboard/: live-map.tsx  transaction-feed.tsx
src/components/layout/: main-nav.tsx
src/components/ui/: button.tsx  custom-select.tsx  donation-modal.tsx  ticker.tsx
src/lib/: causes.ts  circle.ts  polymarket.ts  smart-contracts.ts
src/lib/hooks/: usePools.ts  useTransactions.ts
src/lib/solana/: client.ts  donate.ts  idl.ts  pools.ts  program.ts  solana_aid.json  solana_aid.ts  transactions.ts  types.ts
src/types/: index.ts  react-globe-gl.d.ts
