[package]
name = "solana_direct"
version = "0.1.0"
description = "Decentralized Emergency Aid"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_direct"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"] # <--- THIS WAS MISSING

[dependencies]
anchor-lang = "0.30.1"